--- a/src/main/resources/travel/travelagency/views/starting_page.fxml
+++ b/src/main/resources/travel/travelagency/views/starting_page.fxml
@@ -11,168 +11,111 @@
     <content>
         <Pane prefHeight="1022" prefWidth="1440">
             <children>
-                <Rectangle fx:id="startingPage" fill="#FFFFFF" height="1024" width="1440">
+                <Rectangle id="startingPage" fill="#FFFFFF" height="1024" width="1440">
                 </Rectangle>
-                <Group fx:id="searchTripGroup" layoutX="255" layoutY="802">
-                    <Group fx:id="bookingIDGroup" layoutX="44" layoutY="32">
-                        <Text fx:id="bookingIDText" fill="#000000" layoutX="3.6666666666667" layoutY="20" text="Booking No." textAlignment="CENTER" wrappingWidth="110">
-                            <font>
-                                <Font name="Poppins" size="20" />
-                            </font>
-                        </Text>
-                        <TextField fx:id="bookingIDTextField" layoutX="5.3333333333333" layoutY="50">
-                            <font>
-                                <Font name="Poppins" size="16" />
-                            </font>
-                        </TextField>
-                    </Group>
-                    <Group fx:id="customerNameGroup" layoutX="398" layoutY="32">
-                        <Text fx:id="customerNameText" fill="#000000" layoutX="3.6666666666667" layoutY="20" text="Customer Name" textAlignment="CENTER" wrappingWidth="182">
-                            <font>
-                                <Font name="Poppins" size="20" />
-                            </font>
-                        </Text>
-                        <TextField fx:id="customerNameTextField" layoutX="5.3333333333333" layoutY="50">
-                            <font>
-                                <Font name="Poppins" size="16" />
-                            </font>
-                        </TextField>
-                    </Group>
-                    <Group fx:id="customerIDGroup" layoutX="221" layoutY="32">
-                        <Text fx:id="customerIDText" fill="#000000" layoutX="3.6666666666667" layoutY="20" text="Customer ID" textAlignment="CENTER" wrappingWidth="140">
-                            <font>
-                                <Font name="Poppins" size="20" />
-                            </font>
-                        </Text>
-                        <TextField fx:id="customerIDTextField" layoutX="5.3333333333333" layoutY="50">
-                            <font>
-                                <Font name="Poppins" size="16" />
-                            </font>
-                        </TextField>
-                    </Group>
 
-                    <Button fx:id= "searchButton" layoutX="746.0" layoutY="34.0" text="SEARCH" textAlignment="CENTER" onAction="#_search_bookings_onClick">
+                <Group id="taskbar" layoutX="160">
+                    <Rectangle id="background" fill="#FFFFFF" height="102" width="1440">
+                    </Rectangle>
+                    <ImageView id="companyLogo" layoutY="10" fitHeight="88" fitWidth="133" pickOnBounds="true" preserveRatio="true">
+                        <Image url="@../../../drawable/company_logo_2.png"/>
+                    </ImageView>
+                    <Text fx:id="agencyName" fill="#3B768A" layoutX="150" layoutY="60" wrappingWidth="500">
+                        <font>
+                            <Font name="Noto Serif Tamil" size="30" />
+                        </font>
+                    </Text>
+                    <Group id="taskbarTexts" layoutX="580" layoutY="50">
+                        <Text fx:id="home" fill="#000000" text="Home" textAlignment="CENTER" wrappingWidth="110" onMouseClicked="#_home_onClick">
+                            <font>
+                                <Font name="Poppins" size="20" />
+                            </font>
+                        </Text>
+                        <Text fx:id="searchBookings" fill="#000000" layoutX="120" onMouseClicked="#_searchBookings_onClick" text="Bookings" textAlignment="CENTER" wrappingWidth="110">
+                            <font>
+                                <Font name="Poppins" size="20" />
+                            </font>
+                        </Text>
+                        <Text fx:id="createBooking" fill="#000000" layoutX="240" text="New Trip" textAlignment="CENTER" wrappingWidth="110">
+                            <font>
+                                <Font name="Poppins" size="20" />
+                            </font>
+                        </Text>
+                        <Button fx:id="logoutButton" layoutX="360" layoutY="-25" textAlignment="CENTER" onAction="#_logout_onClick">
+                            <font>
+                                <Font name="Mako" size="20" />
+                            </font>
+                        </Button>
+                    </Group>
+                    <Rectangle id="dividerLine" fill="#3B768A" height="1" layoutY="102" width="1207"/>
+                </Group>
+
+                <Group id="complementaryImageGroup" layoutX="160" layoutY="113">
+                    <ImageView id="complementaryImage" fitHeight="355" fitWidth="1120" pickOnBounds="true" preserveRatio="true">
+                        <Image url="@../../../drawable/complementary_image_2.png"/>
+                    </ImageView>
+                </Group>
+
+                <Group id="searchBookingGroup" layoutX="255" layoutY="556">
+                    <Text fx:id="searchBookingTitle" fill="#3B768A" text="Search for an existing booking" wrappingWidth="800">
+                        <font>
+                            <Font name="Merriweather" size="40" />
+                        </font>
+                    </Text>
+                    <Group id="bookingIDGroup" layoutY="40">
+                        <Text fx:id="bookingIDText" fill="#000000" text="Booking No." textAlignment="CENTER" wrappingWidth="200">
+                            <font>
+                                <Font name="Poppins" size="20" />
+                            </font>
+                        </Text>
+                        <TextField fx:id="bookingIDTextField" layoutY="30" maxWidth="200">
+                            <font>
+                                <Font name="Poppins" size="16" />
+                            </font>
+                        </TextField>
+                    </Group>
+                    <Group id="customerNameGroup" layoutX="210" layoutY="40">
+                        <Text fx:id="customerNameText" fill="#000000" text="Customer Name" textAlignment="CENTER" wrappingWidth="200">
+                            <font>
+                                <Font name="Poppins" size="20" />
+                            </font>
+                        </Text>
+                        <TextField fx:id="customerNameTextField"  layoutY="30" maxWidth="200">
+                            <font>
+                                <Font name="Poppins" size="16" />
+                            </font>
+                        </TextField>
+                    </Group>
+                    <Group id="customerIDGroup" layoutX="420" layoutY="40">
+                        <Text fx:id="customerIDText" fill="#000000" text="Customer ID" textAlignment="CENTER" wrappingWidth="200">
+                            <font>
+                                <Font name="Poppins" size="20" />
+                            </font>
+                        </Text>
+                        <TextField fx:id="customerIDTextField" layoutY="30" maxWidth="200">
+                            <font>
+                                <Font name="Poppins" size="16" />
+                            </font>
+                        </TextField>
+                    </Group>
+                    <Button fx:id= "searchBookingButton" layoutX="746.0" layoutY="40" text="SEARCH" textAlignment="CENTER" onAction="#_search_bookings_onClick">
                         <font>
                             <Font name="Mako" size="24" />
                         </font>
                     </Button>
-            </Group>
-
-            <Text fx:id="search_for_an_existing_trip" fill="#3B768A" layoutX="268.33333333333" layoutY="785" text="Search for an existing trip" wrappingWidth="586">
-                <font>
-                    <Font name="Merriweather" size="40" />
-                </font>
-            </Text>
-
-            <Group fx:id="bild" layoutX="160" layoutY="113">
-                <ImageView fx:id="david_vives_elf8m_ywrty_unsplash_1" fitHeight="355" fitWidth="1120" layoutX="0" layoutY="0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../../../drawable/david_vives_elf8m_ywrty_unsplash_1.png" />
-                    </image>
-                </ImageView>
-            </Group>
-
-                <!-- android style --><Group fx:id="new_trip" layoutX="255" layoutY="556">
-
-                <!-- android style --><Group fx:id="frame_5_ek1" layoutX="44" layoutY="32">
-
-                <Text fx:id="destination" fill="#000000" layoutX="3.6666666666667" layoutY="20" text="Destination" textAlignment="CENTER" wrappingWidth="130">
-                    <font>
-                        <Font name="Poppins" size="20" />
-                    </font>
-                </Text>
-                <Text fx:id="where_to_" fill="#000000" layoutX="5.3333333333333" layoutY="50" text="Where to?" wrappingWidth="102">
-                    <font>
-                        <Font name="Poppins" size="16" />
-                    </font>
-                </Text>
-            </Group>
-
-                <!-- android style --><Group fx:id="frame_7_ek1" layoutX="398" layoutY="32">
-
-                <Text fx:id="people" fill="#000000" layoutX="3.6666666666667" layoutY="20" text="People" textAlignment="CENTER" wrappingWidth="84">
-                    <font>
-                        <Font name="Poppins" size="20" />
-                    </font>
-                </Text>
-                <Text fx:id="how_many_persons_" fill="#000000" layoutX="5.3333333333333" layoutY="50" text="How many persons?" wrappingWidth="195">
-                    <font>
-                        <Font name="Poppins" size="16" />
-                    </font>
-                </Text>
-            </Group>
-
-                <!-- android style --><Group fx:id="frame_6_ek1" layoutX="221" layoutY="32">
-
-                <Text fx:id="date" fill="#000000" layoutX="3.6666666666667" layoutY="20" text="'Date'" textAlignment="CENTER" wrappingWidth="63">
-                    <font>
-                        <Font name="Poppins" size="20" />
-                    </font>
-                </Text>
-                <Text fx:id="select_date" fill="#000000" layoutX="5.3333333333333" layoutY="50" text="Select date" wrappingWidth="119">
-                    <font>
-                        <Font name="Poppins" size="16" />
-                    </font>
-                </Text>
-            </Group>
-
-          <Button layoutX="746.0" layoutY="37.0" text="SEARCH" textAlignment="CENTER">
-              <font>
-                  <Font name="Mako" size="24" />
-              </font>
-          </Button>
-
-            </Group>
-
-                <!-- android style --><Group fx:id="taskbar" layoutX="0" layoutY="0">
-
-                <Rectangle fx:id="rectangle_6" fill="#FFFFFF" height="102" layoutX="0" layoutY="0" width="1440">
-                </Rectangle>
-
-                <ImageView fx:id="ellipse_2" fitHeight="88" fitWidth="133" layoutX="160" layoutY="7" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../../../drawable/ellipse_3.png" />
-                    </image>
-                </ImageView>
-                <!-- android style --><Group fx:id="taskbar_texts" layoutX="740" layoutY="34">
-
-                <Text fx:id="home" fill="#000000" layoutX="4" layoutY="24" text="Home" textAlignment="CENTER" wrappingWidth="89">
-                    <font>
-                        <Font name="Poppins" size="24" />
-                    </font>
-                </Text>
-                <Text fx:id="_new_trip_ek1" fill="#000000" layoutX="240" layoutY="24" onMouseClicked="#_new_trip_ek1_onClick" text="New Trip" textAlignment="CENTER" wrappingWidth="119">
-                    <font>
-                        <Font name="Poppins" size="24" />
-                    </font>
-                </Text>
-                <Text fx:id="_bookings" fill="#000000" layoutX="104" layoutY="24" onMouseClicked="#_all_bookings_onClick" text="Bookings" textAlignment="CENTER" wrappingWidth="125">
-                    <font>
-                        <Font name="Poppins" size="24" />
-                    </font>
-                </Text>
-            </Group>
-
-                <Rectangle fx:id="line_1" fill="#3B768A" height="1" layoutX="115" layoutY="102" width="1207">
-                </Rectangle>
-                <Text fx:id="life_is_short__travel_often" fill="#3B768A" layoutX="317" layoutY="62" text="Life is short, travel often" wrappingWidth="458">
-                    <font>
-                        <Font name="Noto Serif Tamil" size="30" />
-                    </font>
-                </Text>
-
-          <Button layoutX="1189.0" layoutY="28.0" text="LOG OUT" textAlignment="CENTER" onAction="#_logout_onClick">
-              <font>
-                  <Font name="Mako" size="24" />
-              </font>
-          </Button>
-            </Group>
-
-                <Text fx:id="book_a_new_trip" fill="#3B768A" layoutX="268.33333333333" layoutY="537" text="Book a new trip" wrappingWidth="410">
-                    <font>
-                        <Font name="Merriweather" size="40" />
-                    </font>
-                </Text>
+                </Group>
+                <Group id="createBookingGroup" layoutX="255" layoutY="785">
+                    <Text fx:id="createBookingTitle" fill="#3B768A" text="Create a new booking" wrappingWidth="800">
+                        <font>
+                            <Font name="Merriweather" size="40" />
+                        </font>
+                    </Text>
+                    <Button fx:id= "createBookingButton" layoutX="746.0" layoutY="40" text="CREATE" textAlignment="CENTER" disable="true">
+                        <font>
+                            <Font name="Mako" size="24" />
+                        </font>
+                    </Button>
+                </Group>
             </children>
         </Pane>
     </content>
