--- a/src/main/resources/travel/travelagency/views/booking_details.fxml
+++ b/src/main/resources/travel/travelagency/views/booking_details.fxml
@@ -162,7 +162,7 @@
                 </Rectangle>
                 <ImageView fx:id="ellipse_2" fitHeight="88" fitWidth="133" layoutX="160" layoutY="7" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../drawable/ellipse_2.png" />
+                        <Image url="@../../../drawable/company_logo.png" />
                     </image>
                 </ImageView>
                 <!-- android style --><Group fx:id="taskbar_texts" layoutX="740" layoutY="34">
