--- a/src/main/resources/travel/travelagency/views/landing_page.fxml
+++ b/src/main/resources/travel/travelagency/views/landing_page.fxml
@@ -11,43 +11,43 @@
     <content>
         <Pane prefWidth="1440" prefHeight="1022" >
             <children>
-                <Rectangle fx:id="landingPage" width="1440" height="1024" fill="#FFFFFF">
+                <Rectangle id="background1" width="1440" height="1024" fill="#FFFFFF">
                 </Rectangle>
-                <Rectangle fx:id="rectangle_2" width="720" height="1024" fill="#FFFFFF">
+                <Rectangle id="background2" width="720" height="1024" fill="#FFFFFF">
                 </Rectangle>
-                <ImageView fx:id="ellipse_2" pickOnBounds="true" preserveRatio="true" layoutX="209" layoutY="155"
+                <ImageView id="companyLogo" pickOnBounds="true" preserveRatio="true" layoutX="209" layoutY="155"
                            fitWidth="301" fitHeight="185">
-                    <Image url="@../../../drawable/ellipse_2.png"/>
+                    <Image url="@../../../drawable/company_logo.png"/>
                 </ImageView>
-                <ImageView fx:id="rectangle_3" pickOnBounds="true" preserveRatio="true" layoutX="720" layoutY="66"
+                <ImageView id="complementaryImage" pickOnBounds="true" preserveRatio="true" layoutX="720" layoutY="66"
                            fitWidth="720" fitHeight="1024">
-                    <Image url="@../../../drawable/rectangle_3.png"/>
+                    <Image url="@../../../drawable/complementary_image.png"/>
                 </ImageView>
 
-                <Text fx:id="headerMessage" textAlignment="LEFT" fill="#000000" layoutX="200" layoutY="400" wrappingWidth="400" text="Welcome back!" >
+                <Text fx:id="headerMessage" fill="#000000" layoutX="200" layoutY="400" wrappingWidth="400" >
                     <font>
                         <Font name="Poppins" size="40" />
                     </font>
                 </Text>
 
-                <Group fx:id="credentialsGroup" layoutY="452" layoutX="161">
+                <Group id="credentialsGroup" layoutY="452" layoutX="161">
                     <Group fx:id="usernameGroup">
-                        <TextField fx:id="usernameTextField" promptText="Username" onAction="#_login_onClick" maxWidth="400">
+                        <TextField fx:id="usernameTextField" onAction="#_login_onClick" maxWidth="400">
                             <font>
                                 <Font name="Poppins" size="32" />
                             </font>
                         </TextField>
                     </Group>
 
-                    <Group fx:id="passwordGroup" layoutY="80">
-                        <PasswordField fx:id="passwordTextField" promptText="Password" onAction="#_login_onClick" maxWidth="400">
+                    <Group id="passwordGroup" layoutY="80">
+                        <PasswordField fx:id="passwordTextField" onAction="#_login_onClick" maxWidth="400">
                             <font>
                                 <Font name="Poppins" size="32" />
                             </font>
                         </PasswordField>
                     </Group>
 
-                    <Group fx:id="infoMessageGroup" layoutY="190">
+                    <Group id="infoMessageGroup" layoutY="190">
                         <Text fx:id="infoMessage">
                             <font>
                                 <Font name="Poppins" size="32"/>
@@ -55,8 +55,8 @@
                         </Text>
                     </Group>
 
-                    <Group fx:id="loginButtonGroup" layoutY="220">
-                        <Button textAlignment="CENTER" text="LOG IN" onAction="#_login_onClick">
+                    <Group id="loginButtonGroup" layoutY="220">
+                        <Button fx:id="loginButton" textAlignment="CENTER" onAction="#_login_onClick">
                             <font>
                                 <Font name="Mako" size="32" />
                             </font>
